# miniscriptexec

./: .gitignore  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/lynccom/so_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/jerry-port/default/: default-io.c
app/src/main/java/lynccom/so_test/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/lynccom/so_test/: ExampleUnitTest.java
